<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_scan_music"
            android:icon="@mipmap/nav_menu_scan_music"
            android:title="@string/nav_menu_scan_music" />
        <item
            android:id="@+id/nav_menu_theme"
            android:icon="@mipmap/nav_menu_theme"
            android:title="@string/nav_menu_theme" />
        <item
            android:id="@+id/nav_menu_time_close"
            android:icon="@mipmap/nav_menu_time_close"
            android:title="@string/nav_menu_time_close" />
        <item
            android:id="@+id/nav_menu_check_version"
            android:icon="@mipmap/nav_menu_check_version"
            android:title="@string/nav_menu_check_version" />
        <item
            android:id="@+id/nav_menu_about"
            android:icon="@mipmap/nav_menu_about"
            android:title="@string/nav_menu_about" />
    </group>

</menu>