<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_menu_custom_action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/menu" />

    <LinearLayout
        android:id="@+id/ll_body_custom_action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_song_list_custom_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/song_list"
            android:textColor="@color/color_text_gray_1"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/tv_singer_custom_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/author"
            android:textColor="@color/color_text_gray_1"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/tv_album_custom_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/album"
            android:textColor="@color/color_text_gray_1"
            android:textSize="@dimen/text_size_default" />

        <TextView
            android:id="@+id/tv_like_custom_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/like"
            android:textColor="@color/color_text_gray_1"
            android:textSize="@dimen/text_size_default" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_search_custom_action_bar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_search_custom_action_bar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_search_shape"
            android:gravity="center"
            android:padding="3dp"
            android:textSize="@dimen/text_size_mini_x" />

        <ImageView
            android:id="@+id/img_close_custom_action_bar"
            android:layout_width="wrap_content"
            android:src="@mipmap/close"
            android:paddingRight="5dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/img_search_custom_action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingRight="10dp"
        android:src="@mipmap/search" />
</RelativeLayout>